fix contacts page on mobile

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -56,3 +56,13 @@ body {
 .custom-shape-divider-bottom-1701452007 .shape-fill {
   fill: #f97316;
 }
+
+.map-iframe {
+  margin: 1rem 0 2rem 1rem;
+  width: 280px;
+  height: 380px;
+  @media (min-width: 992px) {
+    width: 600px;
+    height: 380px;
+  }
+}
